# ivoryOS-plugin-template

./: MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
ivoryos_plugin/: __init__.py  hello_world.py  plugin.py
ivoryos_plugin/templates/: example.html
