[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ivoryos_plugin"
version = "0.1.0"
authors = [
  { name="Ivory Zhang", email="ivoryzhang@chem.ubc.ca" },
]
description = "A plugin for IvoryOS"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ivoryos",
]

[project.urls]
Homepage = "https://gitlab.com/heingroup/ivoryos-plugin-template"
Issues = "https://gitlab.com/heingroup/ivoryos-plugin-template/-/issues"